# DataFloJava

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.gradle  documentation.drawio
documentation/: logic.md
src/: CMakeLists.txt
src/main/cpp/include/driver/net/: dftls-aead-structure.hpp  driver.hpp
src/main/cpp/include/future/: Future.h
src/main/cpp/include/libdataflo/: DataFlo.h  IDataPlane.h
src/main/cpp/lib/driver/net/: linux_hiperf.cpp
src/main/java/sh/devya/DataFloJava/client/: BasicClient.java  IClient.java  IConsumer.java
src/main/java/sh/devya/DataFloJava/dataflo/: DataFloImpl.java  IDataFlo.java  IDataPlane.java  Stream.java
src/main/java/sh/devya/DataFloJava/messages/: DataMessage.java  SubscriptionRequest.java  Unsubscription.java
src/main/java/sh/devya/DataFloJava/provider/: IProvider.java
src/main/java/sh/devya/DataFloJava/resolver/: IResolver.java  SimpleResolver.java
src/main/java/sh/devya/DataFloJava2/client/: IClient.java  IConsumer.java
src/main/java/sh/devya/DataFloJava2/dataflo/: IDataFlo.java
src/main/java/sh/devya/DataFloJava2/dataplane/: IDataPlane.java
src/main/java/sh/devya/DataFloJava2/dataplane/connector/: IClientConnector.java  IConnector.java  IServiceConnector.java  (+2 more)
src/main/java/sh/devya/DataFloJava2/message/: Message.java
src/main/java/sh/devya/DataFloJava2/resolver/: IResolver.java
src/main/java/sh/devya/DataFloJava2/service/: IProducer.java  IService.java
src/main/java/sh/devya/RandomProjectUsingDataFlo/main/: Main.java
src/main/java/sh/devya/RandomProjectUsingDataFlo/service/: Service.java
